tests/error/try_default_construct_non_default_constructible.bz
// error: type '*int32' is not default constructible
function test()
{
	let _ = (*int32)();
}
